# django-issues

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
django_issues/: asgi.py  settings.py  urls.py  wsgi.py
django_issues/demo/: urls.py  views.py
