[tool.poetry]
name = "django-errors"
version = "0.1.0"
description = ""
authors = ["Samuel C. Tyler <skamansam@gmail.com>"]
readme = "README.md"
packages = [{include = "django_errors"}]

[tool.poe.tasks]
test   = "pytest --cov=apiserver_v2 --cov=enter --cov-report=html tests"
report = "xdg-open file://${PWD}/coverage_html/index.html"
serve  = { shell = "python manage.py runserver", help = "run a local server" }
makemigrations  = { shell = "python manage.py makemigrations" }
migrate  = { shell = "python manage.py migrate" }
manage  = { cmd = "python manage.py", help = "run a manage command"}


[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.10"
djangorestframework = "^3.14.0"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
